--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-requests neccesary for the API to function
-fastapi
-uvicorn
-pydantic
-slqconnector
-passlib[bcrypt]
-python-multipart
-python-jose
-python-dotenv
-sqlalchemy
-alembic 
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+mysql-connector-python==8.2.0
+python-multipart==0.0.6
+pydantic==2.5.0
+python-dotenv==1.0.0
